@@ -156,6 +156,17 @@ systemctl start network.service</screen>
    </para>
   </section>
 
+  <section>
+   <!-- bnc#899895 -->
+   <title>NET Installation Using Wifi</title>
+   <para>
+    Installing the NET install using Wifi present some problems in
+    YaST.  This is a work in progress and the will be soon available,
+    but meanwhile the only option is to use a wire connection to
+    complete the NET installation.
+   </para>
+  </section>
+
  <section id="general">
   <title>General</title>
   <para/>
